--- a/src/assets/scss/components/ui/tooltip/BasicTooltip.scss
+++ b/src/assets/scss/components/ui/tooltip/BasicTooltip.scss
@@ -17,6 +17,7 @@
     border-radius: 12px;
     background-color: rgba($color-black, 0.9);
     transform: translateY(-100%);
+    text-align: left;
   }
 
   &__tail {
